deploy-emsapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ems-deploy
  namespace: emsapp
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2        # how many pods we can add at a time
      maxUnavailable: 0  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  template:
    metadata:
      labels:
        app: emsapp
    spec:
        containers:
        - name: emsapp
          image: avish1990/ems:c30e91e605cd1f993dd8349d30c0b2091fcaa206-1.36
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c" ]
          args: [ "bin/catalina.sh start && /opt/prometheus_exporters/node_exporter" ]
          ports:
          - name: http
            containerPort: 9020
