svc-emsapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: emsapp-svc
  namespace: emsapp
  labels:
    app: emsapp
spec:
  selector:
    app: emsapp
  type: NodePort
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  
  - port: 9100
    name: metrics
    targetPort: 9100
    protocol: TCP
