fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: emsapp-ingress
        namespace: emsapp
        annotations:
          #nginx.ingress.kubernetes.io/app-root: /myapp
          kubernetes.io/ingress.global-static-ip-name: kube
          #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
     rules:
     #- host: <domain.xyz>
      - http:
         paths:
     #    - path: /prometheus/graph
     #      backend:
     #           serviceName: prometheus
     #           servicePort: 9090
         - path: /*
           backend:
                serviceName: grafana
                servicePort: 80
         - path: /myapp/*
           backend:
                serviceName: emsapp-svc
                servicePort: 8080
