ingress-emsapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: emsapp-ingress
    namespace: emsapp
        
spec:
   backend:
      serviceName: emsapp-svc
      servicePort: 8080
